[FIX] - Fixed scrollbar

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -52,6 +52,7 @@
   width: 100%;
 
   flex: 1;
+  scrollbar-gutter: stable;
 }
 
 .table::-webkit-scrollbar {
